fix dialogs bug when text is too large

--- a/applications/space/server/WebContent/office/styles/ext-all.css
+++ b/applications/space/server/WebContent/office/styles/ext-all.css
@@ -3453,3 +3453,7 @@ td.x-date-mp-sep {
 #x-msg-box .x-dlg-bd, .x-btn button {
   font-size: 14px;
 }
+
+.ext-mb-text {
+    white-space: nowrap;
+}
